<resources>
    <string name="app_name">MedicTime</string>
    <string name="bienvenido_a">¡Bienvenido a</string>
    <string name="medictime">MedicTime!</string>
    <string name="ver_calendarios">ver calendarios</string>
    <string name="perfil">perfil</string>
    <string name="username_hint">Usuario</string>
    <string name="email_hint">Correo Electronico</string>
    <string name="password_hint">contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="register_button_text">Registrar</string>
    <string name="register_text">Registro:</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="user_email">correo@example.com</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="tvUserName">Usuario</string>
    <string name="add_events">Agregar Evento</string>
    <string name="share_calendar">Compartir Calendario</string>
    <string name="recipient_email_hint">Correo electrónico del destinatario</string>
    <string name="select_date">Seleccionar Fecha</string>
    <string name="select_time">Seleccionar Hora</string>
    <string name="event_title_hint">Título del Evento</string>
    <string name="event_description_hint">Descripción del Evento</string>
    <string name="title_calendar">Título del Calendario</string>
    <string name="description_calendar">Descripción del Calendario</string>
    <string name="crear_nuevo_calendario">Crear nuevo calendario</string>
    <string name="title_hint">Título del Calendario</string>
    <string name="description_hint">Descripción del Calendario</string>
    <string name="create_button_text">Crear Calendario</string>
    <string name="introduce_las_medicinas">Introduce las medicinas</string>

</resources>