<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E8A42"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <View
        android:layout_width="325dp"
        android:layout_height="490dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bordeperfil" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-380dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4E8A42"
        android:text="@string/login_button_text"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="195dp"
        android:layout_marginTop="-70dp"
        android:backgroundTint="#4E8A42"
        android:text="@string/register_button_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-380dp"
        android:text="@string/register_text"
        android:textColor="#4E8A42"
        android:textSize="40sp"
        android:textStyle="bold" />



</LinearLayout>