<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#1D3557"
        android:text="@string/cerrar_sesion"
        android:textColor="#FFFFFF"
         />

</LinearLayout>
