<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bordecalendario" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-88dp"
        android:layout_marginBottom="16dp"
        android:text="@string/user_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
        android:id="@+id/collapsibleCalendar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddEvents"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-10dp"
            android:backgroundTint="#4E8A42"
            android:minHeight="49dp"
            android:text="@string/add_events"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btnShareCalendar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-20dp"
            android:backgroundTint="#1C4700"
            android:minHeight="49dp"
            android:text="@string/share_calendar"
            android:textColor="@color/white"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />
    </LinearLayout>
</LinearLayout>